Failed attempt to integrate UCB

--- a/experiments/neural-architecture-search/gaussian.ipynb
+++ b/experiments/neural-architecture-search/gaussian.ipynb
@@ -14,9 +14,10 @@
     "from keras.datasets import cifar10\n",
     "from keras.utils import to_categorical\n",
     "\n",
-    "from controller_multiarmed import Controller, StateSpace\n",
-    "from manager import NetworkManager\n",
+    "from controller_gaussian import Controller, StateSpace\n",
+    "from manager_gaussian import NetworkManager\n",
     "from model import model_fn\n",
+    "\n",
     "\n",
     "# create a shared session between Keras and Tensorflow\n",
     "policy_sess = tf.Session()\n",
@@ -108,7 +109,7 @@
     "        print(\"Trial %d: Controller loss : %0.6f\" % (trial + 1, loss))\n",
     "\n",
     "        # write the results of this trial into a file\n",
-    "        with open('train_history.csv', mode='a+') as f:\n",
+    "        with open('train_history_gaussian.csv', mode='a+') as f:\n",
     "            data = [previous_acc, reward]\n",
     "            data.extend(state_space.parse_state_space_list(state))\n",
     "            writer = csv.writer(f)\n",
