Add history page

--- a/APPS-UCU-master-thesis/master-thesis-template.tex
+++ b/APPS-UCU-master-thesis/master-thesis-template.tex
@@ -193,8 +193,13 @@ Last but definitely not least - I would like to thank my closest people and my f
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
+\textbf{ML} & \textbf{M}achine \textbf{L}earning\\
+\textbf{AutoML} & \textbf{Auto}mated \textbf{M}achine \textbf{L}earning\\
+\textbf{NAS} & \textbf{N}eural \textbf{A}rchitecture \textbf{S}earch\\
+\textbf{RL} & \textbf{R}einforcement \textbf{L}earning\\
+\textbf{MDP} & \textbf{M}arkov \textbf{D}ecission \textbf{P}rocess\\
+\textbf{CNN} & \textbf{C}onvolutional \textbf{N}eural \textbf{N}etwork\\
+\textbf{RNN} & \textbf{R}ecurrent \textbf{N}eural \textbf{N}etwork\\
 
 \end{abbreviations}
 
@@ -246,9 +251,9 @@ $\omega$ & angular frequency & \si{\radian} \\
 
 \include{Chapters/Chapter1}
 \include{Chapters/Chapter2} 
-%\include{Chapters/Chapter3}
-%\include{Chapters/Chapter4} 
-%\include{Chapters/Chapter5} 
+\include{Chapters/Chapter3}
+\include{Chapters/Chapter4} 
+\include{Chapters/Chapter5} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
@@ -259,7 +264,7 @@ $\omega$ & angular frequency & \si{\radian} \\
 % Include the appendices of the thesis as separate files from the Appendices folder
 % Uncomment the lines as you write the Appendices
 
-\include{Appendices/AppendixA}
+%\include{Appendices/AppendixA}
 %\include{Appendices/AppendixB}
 %\include{Appendices/AppendixC}
 
