--- a/APPS-UCU-master-thesis/masters.bib
+++ b/APPS-UCU-master-thesis/masters.bib
@@ -13,3 +13,57 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@ARTICLE{2017arXiv170404110S,
+       author = {{Salinas}, David and {Flunkert}, Valentin and {Gasthaus}, Jan},
+        title = "{DeepAR: Probabilistic Forecasting with Autoregressive Recurrent Networks}",
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Artificial Intelligence, Computer Science - Machine Learning, Statistics - Machine Learning},
+         year = "2017",
+        month = "Apr",
+          eid = {arXiv:1704.04110},
+        pages = {arXiv:1704.04110},
+archivePrefix = {arXiv},
+       eprint = {1704.04110},
+ primaryClass = {cs.AI},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017arXiv170404110S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2019arXiv190511946T,
+       author = {{Tan}, Mingxing and {Le}, Quoc V.},
+        title = "{EfficientNet: Rethinking Model Scaling for Convolutional Neural Networks}",
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Machine Learning, Computer Science - Computer Vision and Pattern Recognition, Statistics - Machine Learning},
+         year = "2019",
+        month = "May",
+          eid = {arXiv:1905.11946},
+        pages = {arXiv:1905.11946},
+archivePrefix = {arXiv},
+       eprint = {1905.11946},
+ primaryClass = {cs.LG},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190511946T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Baker2016DesigningNN,
+  title={Designing Neural Network Architectures using Reinforcement Learning},
+  author={Bowen Baker and Otkrist Gupta and Nikhil Naik and Ramesh Raskar},
+  journal={ArXiv},
+  year={2016},
+  volume={abs/1611.02167}
+}
+
+@InProceedings{pmlr-v97-ying19a,
+    title =     {{NAS}-Bench-101: Towards Reproducible Neural Architecture Search},
+    author =    {Ying, Chris and Klein, Aaron and Christiansen, Eric and Real, Esteban and Murphy, Kevin and Hutter, Frank},
+    booktitle = {Proceedings of the 36th International Conference on Machine Learning},
+    pages =     {7105--7114},
+    year =      {2019},
+    editor =    {Chaudhuri, Kamalika and Salakhutdinov, Ruslan},
+    volume =    {97},
+    series =    {Proceedings of Machine Learning Research},
+    address =   {Long Beach, California, USA},
+    month =     {09--15 Jun},
+    publisher = {PMLR},
+    url =       {http://proceedings.mlr.press/v97/ying19a.html}
+    }
