Add tables and figures

--- a/APPS-UCU-master-thesis/masters.bib
+++ b/APPS-UCU-master-thesis/masters.bib
@@ -83,3 +83,12 @@ eprint = {https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/j.1467-9868.2007.0
 abstract = {Summary.â Probabilistic forecasts of continuous variables take the form of predictive densities or predictive cumulative distribution functions. We propose a diagnostic approach to the evaluation of predictive performance that is based on the paradigm of maximizing the sharpness of the predictive distributions subject to calibration. Calibration refers to the statistical consistency between the distributional forecasts and the observations and is a joint property of the predictions and the events that materialize. Sharpness refers to the concentration of the predictive distributions and is a property of the forecasts only. A simple theoretical framework allows us to distinguish between probabilistic calibration, exceedance calibration and marginal calibration. We propose and study tools for checking calibration and sharpness, among them the probability integral transform histogram, marginal calibration plots, the sharpness diagram and proper scoring rules. The diagnostic approach is illustrated by an assessment and ranking of probabilistic forecasts of wind speed at the Stateline wind energy centre in the US Pacific Northwest. In combination with cross-validation or in the time series context, our proposal provides very general, nonparametric alternatives to the use of information criteria for model diagnostics and model selection.},
 year = {2007}
 }
+
+@article{CIFAR,
+author = {Krizhevsky, Alex},
+year = {2012},
+month = {05},
+pages = {},
+title = {Learning Multiple Layers of Features from Tiny Images},
+journal = {University of Toronto}
+}
