Add background related work

--- a/APPS-UCU-master-thesis/master-thesis-template.tex
+++ b/APPS-UCU-master-thesis/master-thesis-template.tex
@@ -201,6 +201,7 @@ Last but definitely not least - I would like to thank my closest people and my f
 \textbf{MDP} & \textbf{M}arkov \textbf{D}ecission \textbf{P}rocess\\
 \textbf{CNN} & \textbf{C}onvolutional \textbf{N}eural \textbf{N}etwork\\
 \textbf{RNN} & \textbf{R}ecurrent \textbf{N}eural \textbf{N}etwork\\
+\textbf{UCB} & \textbf{U}pper \textbf{C}onfidence \textbf{B}ound\\
 
 \end{abbreviations}
 
