--- a/APPS-UCU-master-thesis/masters.bib
+++ b/APPS-UCU-master-thesis/masters.bib
@@ -106,3 +106,52 @@ journal = {University of Toronto}
   biburl    = {https://dblp.org/rec/bib/journals/corr/Thomas15a},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@Article{Auer2002,
+author="Auer, Peter
+and Cesa-Bianchi, Nicol{\`o}
+and Fischer, Paul",
+title="Finite-time Analysis of the Multiarmed Bandit Problem",
+journal="Machine Learning",
+year="2002",
+month="May",
+day="01",
+volume="47",
+number="2",
+pages="235--256",
+abstract="Reinforcement learning policies face the exploration versus exploitation dilemma, i.e. the search for a balance between exploring the environment to find profitable actions while taking the empirically best action as often as possible. A popular measure of a policy's success in addressing this dilemma is the regret, that is the loss due to the fact that the globally optimal policy is not followed all the times. One of the simplest examples of the exploration/exploitation dilemma is the multi-armed bandit problem. Lai and Robbins were the first ones to show that the regret for this problem has to grow at least logarithmically in the number of plays. Since then, policies which asymptotically achieve this regret have been devised by Lai and Robbins and many others. In this work we show that the optimal logarithmic regret is also achievable uniformly over time, with simple and efficient policies, and for all reward distributions with bounded support.",
+issn="1573-0565",
+doi="10.1023/A:1013689704352",
+url="https://doi.org/10.1023/A:1013689704352"
+}
+
+@article{MnihKSGAWR13,
+  author    = {Volodymyr Mnih and
+               Koray Kavukcuoglu and
+               David Silver and
+               Alex Graves and
+               Ioannis Antonoglou and
+               Daan Wierstra and
+               Martin A. Riedmiller},
+  title     = {Playing Atari with Deep Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/1312.5602},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1312.5602},
+  archivePrefix = {arXiv},
+  eprint    = {1312.5602},
+  timestamp = {Mon, 13 Aug 2018 16:47:42 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/MnihKSGAWR13},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article         { lecun-89c,
+original =    "orig/lecun-89c.tiff",
+author  =       "LeCun, Y. and Jackel,  L. D. and Boser, B.  and Denker, J. S.  and Graf, H. P. and Guyon, I. and Henderson, D. and Howard, R. E. and Hubbard, W.",
+title   =        "Handwritten Digit Recognition: Applications of Neural Net Chips and Automatic Learning",
+journal =        "IEEE Communication",
+year    =        "1989",
+month   =        "November",
+pages   =        "41-46",
+note    =        "invited paper"
+}
