--- a/APPS-UCU-master-thesis/master-thesis-template.tex
+++ b/APPS-UCU-master-thesis/master-thesis-template.tex
@@ -46,7 +46,7 @@ openany
 %----------------------------------------------------------------------------------------
 
 \thesistitle{Neural architecture search: a probabilistic approach} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
-\supervisor{Yuriy \textsc{Khoma}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
+\supervisor{Yuriy \textsc{Khoma} \\Vasilii \textsc{Ganishev}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
 \degree{Master of Science} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
 \author{Volodymyr \textsc{Lut}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
@@ -165,17 +165,15 @@ In this paper we review different approaches to use probabilistic methods in exi
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-First of all, I would like to thank my supervisor Mr. Yuriy Khoma and  Mr. Vasily Ganishev for all their support, patience and knowledge shared with me during this project.
+First of all, I would like to thank my supervisor Mr. Yuriy Khoma and  Mr. Vasilii Ganishev for all their support, patience and knowledge shared with me during this project.
 
 I would also like to thank all my colleagues in UCU - those who already graduated, who were working on their masters during this year, and those who left UCU - for being a bright lighthouse, which navigated me towards excellence, for showing a good example and for being a strong and supportive community. 
 
-Many thanks to the UCU team - to all those people, who build and design the educational system I am proud being a part of, to all those who inspired me, shared their vision and made my time being a masters program student an unforgettable experience. I thank everyone who works every day in the UCU - no matter whether they are responsible for brilliant coffee or brilliant courses and workshops.
+Many thanks to the UCU team - to all those people, who build and design the educational system I am proud being a part of, to all those who inspired me, shared their vision and made my time being a masters program student an unforgettable experience. I thank everyone who works every day in the UCU - no matter whether they are responsible for brilliant coffee or brilliant courses and workshops. Special cheer outs to Mr. Artem Chernodub for interesting homework and deep learning course at all. It helped me a lot during writing about ConvNets in this master's thesis.
 
-Special thanks goes to my friend and business partner Serhii Chepkyi for providing a big support during my studies and also for providing a big help with visual materials for this project.
+Special thanks go to my friend and business partner Serhii Chepkyi for providing big support during my studies and also for providing a big help with visual materials for this project.
 
-Last but definitely not least - I would like to thank my closest people and my family - without your eternal love this would not be possible. This was the hardest years in my life and I'm glad and thankful that every second I've felt that I'm not alone.
-
-
+Last but definitely not least - I would like to thank my closest people and my family - without your eternal love, this would not be possible. This was the hardest years in my life and I'm glad and thankful that every second I've felt that I'm not alone.
 \end{acknowledgements}
 
 %----------------------------------------------------------------------------------------
@@ -202,37 +200,9 @@ Last but definitely not least - I would like to thank my closest people and my f
 \textbf{CNN} & \textbf{C}onvolutional \textbf{N}eural \textbf{N}etwork\\
 \textbf{RNN} & \textbf{R}ecurrent \textbf{N}eural \textbf{N}etwork\\
 \textbf{UCB} & \textbf{U}pper \textbf{C}onfidence \textbf{B}ound\\
+\textbf{MLE} & \textbf{M}aximum \textbf{L}ikelyhood \textbf{E}stimate\\
 
 \end{abbreviations}
-
-%----------------------------------------------------------------------------------------
-%	PHYSICAL CONSTANTS/OTHER DEFINITIONS
-%----------------------------------------------------------------------------------------
-
-\begin{constants}{lr@{${}={}$}l} % The list of physical constants is a three column table
-
-% The \SI{}{} command is provided by the siunitx package, see its documentation for instructions on how to use it
-
-Speed of Light & $c_{0}$ & \SI{2.99792458e8}{\meter\per\second} (exact)\\
-%Constant Name & $Symbol$ & $Constant Value$ with units\\
-
-\end{constants}
-
-%----------------------------------------------------------------------------------------
-%	SYMBOLS
-%----------------------------------------------------------------------------------------
-
-\begin{symbols}{lll} % Include a list of Symbols (a three column table)
-
-$a$ & distance & \si{\meter} \\
-$P$ & power & \si{\watt} (\si{\joule\per\second}) \\
-%Symbol & Name & Unit \\
-
-\addlinespace % Gap to separate the Roman symbols from the Greek
-
-$\omega$ & angular frequency & \si{\radian} \\
-
-\end{symbols}
 
 %----------------------------------------------------------------------------------------
 %	DEDICATION
