--- a/APPS-UCU-master-thesis/masters.bib
+++ b/APPS-UCU-master-thesis/masters.bib
@@ -145,7 +145,7 @@ url="https://doi.org/10.1023/A:1013689704352"
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article         { lecun-89c,
+@article         {lecun-89c,
 original =    "orig/lecun-89c.tiff",
 author  =       "LeCun, Y. and Jackel,  L. D. and Boser, B.  and Denker, J. S.  and Graf, H. P. and Guyon, I. and Henderson, D. and Howard, R. E. and Hubbard, W.",
 title   =        "Handwritten Digit Recognition: Applications of Neural Net Chips and Automatic Learning",
@@ -155,3 +155,187 @@ month   =        "November",
 pages   =        "41-46",
 note    =        "invited paper"
 }
+
+@article{mnist,
+  added-at = {2010-06-28T21:16:30.000+0200},
+  author = {LeCun, Yann and Cortes, Corinna},
+  biburl = {https://www.bibsonomy.org/bibtex/2935bad99fa1f65e03c25b315aa3c1032/mhwombat},
+  groups = {public},
+  howpublished = {http://yann.lecun.com/exdb/mnist/},
+  interhash = {21b9d0558bd66279df9452562df6e6f3},
+  intrahash = {935bad99fa1f65e03c25b315aa3c1032},
+  keywords = {MSc _checked character_recognition mnist network neural},
+  lastchecked = {2016-01-14 14:24:11},
+  timestamp = {2016-07-12T19:25:30.000+0200},
+  title = {{MNIST} handwritten digit database},
+  url = {http://yann.lecun.com/exdb/mnist/},
+  username = {mhwombat},
+  year = 2010
+}
+
+@inproceedings{imagenet,
+        AUTHOR = {Deng, J. and Dong, W. and Socher, R. and Li, L.-J. and Li, K. and Fei-Fei, L.},
+        TITLE = {{ImageNet: A Large-Scale Hierarchical Image Database}},
+        BOOKTITLE = {CVPR09},
+        YEAR = {2009},
+        BIBSOURCE = "http://www.image-net.org/papers/imagenet_cvpr09.bib"
+}
+
+@article{flowers,
+title= {Oxford 102 Flowers},
+author= {Nilsback, M-E. and Zisserman, A., 2008},
+abstract= {A 102 category dataset consisting of 102 flower categories, commonly occuring in the United Kingdom. Each class consists of 40 to 258 images. The images have large scale, pose and light variations.},
+keywords= {fastai},
+terms= {},
+license= {},
+superseded= {},
+url= {}
+}
+
+@book{Goodfellow,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
+
+@inproceedings {lecun-98b,
+original =    "orig/lecun-98b.ps.gz",
+author = 	"LeCun, Y. and Bottou, L. and Orr, G. and Muller, K.",
+title = 	"Efficient BackProp",
+booktitle =	"Neural Networks: Tricks of the trade",
+editor =        "Orr, G. and Muller K.",
+publisher =     "Springer",
+year =		1998
+}
+
+@inproceedings{thornton2013auto,
+  added-at = {2017-09-29T18:28:35.000+0200},
+  author = {Thornton, Chris and Hutter, Frank and Hoos, Holger H and Leyton-Brown, Kevin},
+  biburl = {https://www.bibsonomy.org/bibtex/2d87b76e5e6e7d942d0000761e2226193/becker},
+  booktitle = {Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  interhash = {f2c548b6ef5527135ed36915a2bed429},
+  intrahash = {d87b76e5e6e7d942d0000761e2226193},
+  keywords = {citedby:scholar:count:262 citedby:scholar:timestamp:2017-9-29 thema thema:automl uw_ws17_ml},
+  organization = {ACM},
+  pages = {847--855},
+  timestamp = {2017-10-02T15:15:41.000+0200},
+  title = {Auto-WEKA: Combined selection and hyperparameter optimization of classification algorithms},
+  url = {https://arxiv.org/pdf/1208.3719},
+  year = 2013
+}
+@inproceedings{SnoekLA12,
+  added-at = {2018-11-06T16:55:56.000+0100},
+  author = {Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P.},
+  biburl = {https://www.bibsonomy.org/bibtex/2eaecfd561ddaba09e354addb3030c2ca/jakobgerst},
+  booktitle = {NIPS},
+  editor = {Bartlett, Peter L. and Pereira, Fernando C. N. and Burges, Christopher J. C. and Bottou, Léon and Weinberger, Kilian Q.},
+  ee = {http://papers.nips.cc/paper/4522-practical-bayesian-optimization-of-machine-learning-algorithms},
+  interhash = {24e5255da683c2f720d6e21205985bea},
+  intrahash = {eaecfd561ddaba09e354addb3030c2ca},
+  keywords = {learning machine machine-learning parameter-tuning tuning},
+  pages = {2960-2968},
+  timestamp = {2018-11-06T16:55:56.000+0100},
+  title = {Practical Bayesian Optimization of Machine Learning Algorithms.},
+  url = {http://dblp.uni-trier.de/db/conf/nips/nips2012.html#SnoekLA12},
+  year = 2012
+}
+
+@article{ZeilerF13,
+  added-at = {2018-08-13T00:00:00.000+0200},
+  author = {Zeiler, Matthew D. and Fergus, Rob},
+  biburl = {https://www.bibsonomy.org/bibtex/2b52005fe7a966d5e37ab94aeb9544cff/dblp},
+  ee = {http://arxiv.org/abs/1311.2901},
+  interhash = {768566ccb1631027c31ecd83b6170649},
+  intrahash = {b52005fe7a966d5e37ab94aeb9544cff},
+  journal = {CoRR},
+  keywords = {dblp},
+  timestamp = {2018-08-14T14:20:15.000+0200},
+  title = {Visualizing and Understanding Convolutional Networks.},
+  url = {http://dblp.uni-trier.de/db/journals/corr/corr1311.html#ZeilerF13},
+  volume = {abs/1311.2901},
+  year = 2013
+}
+
+@incollection{NEURIPS2019_9015,
+title = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+booktitle = {Advances in Neural Information Processing Systems 32},
+editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+pages = {8024--8035},
+year = {2019},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+}
+
+@misc{tensorflow2015-whitepaper,
+title={{TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
+url={http://tensorflow.org/},
+note={Software available from tensorflow.org},
+author={
+    Mart\'{\i}n~Abadi and
+    Ashish~Agarwal and
+    Paul~Barham and
+    Eugene~Brevdo and
+    Zhifeng~Chen and
+    Craig~Citro and
+    Greg~S.~Corrado and
+    Andy~Davis and
+    Jeffrey~Dean and
+    Matthieu~Devin and
+    Sanjay~Ghemawat and
+    Ian~Goodfellow and
+    Andrew~Harp and
+    Geoffrey~Irving and
+    Michael~Isard and
+    Yangqing Jia and
+    Rafal~Jozefowicz and
+    Lukasz~Kaiser and
+    Manjunath~Kudlur and
+    Josh~Levenberg and
+    Dan~Man\'{e} and
+    Rajat~Monga and
+    Sherry~Moore and
+    Derek~Murray and
+    Chris~Olah and
+    Mike~Schuster and
+    Jonathon~Shlens and
+    Benoit~Steiner and
+    Ilya~Sutskever and
+    Kunal~Talwar and
+    Paul~Tucker and
+    Vincent~Vanhoucke and
+    Vijay~Vasudevan and
+    Fernanda~Vi\'{e}gas and
+    Oriol~Vinyals and
+    Pete~Warden and
+    Martin~Wattenberg and
+    Martin~Wicke and
+    Yuan~Yu and
+    Xiaoqiang~Zheng},
+  year={2015},
+}
+
+@manual{colab,
+      title  = "Google Colaboratory",
+      author = "Alphabet Inc.",
+      note   = "\url{https://colab.research.google.com/}",
+      year   = "2019"
+    }
+    
+    
+@inproceedings{nas102,
+title={NAS-Bench-102: Extending the Scope of Reproducible Neural Architecture Search},
+author={Xuanyi Dong and Yi Yang},
+booktitle={International Conference on Learning Representations},
+year={2020},
+url={https://openreview.net/forum?id=HJxyZkBKDr}
+}
+
+@manual{github,
+      title  = "Neural Architecture Search: A Probabilistic Approach",
+      author = "Volodymyr Lut",
+      note   = "\url{https://github.com/volodymyrlut/masters-project}",
+      year   = "2020"
+    }
