--- a/APPS-UCU-master-thesis/masters.bib
+++ b/APPS-UCU-master-thesis/masters.bib
@@ -339,3 +339,60 @@ url={https://openreview.net/forum?id=HJxyZkBKDr}
       note   = "\url{https://github.com/volodymyrlut/masters-project}",
       year   = "2020"
     }
+
+@manual{nasgithub,
+	title = "Basic implementation of [Neural Architecture Search with Reinforcement Learning](https://arxiv.org/abs/1611.01578).",
+    note   = "\url{https://github.com/titu1994/neural-architecture-search}",
+    author = "Somshubra Majumdar",
+    year = "2017"
+    }
+    
+@manual{rltutorial,
+	author = "Adam Paszke",
+	year = "2017",
+	note   = "\url{https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html}",
+	title = "Reinforcement Learning (DQN) Tutorial"
+}
+
+@article{Nair,
+  author    = {Arun Nair and
+               Praveen Srinivasan and
+               Sam Blackwell and
+               Cagdas Alcicek and
+               Rory Fearon and
+               Alessandro De Maria and
+               Vedavyas Panneershelvam and
+               Mustafa Suleyman and
+               Charles Beattie and
+               Stig Petersen and
+               Shane Legg and
+               Volodymyr Mnih and
+               Koray Kavukcuoglu and
+               David Silver},
+  title     = {Massively Parallel Methods for Deep Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/1507.04296},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1507.04296},
+  archivePrefix = {arXiv},
+  eprint    = {1507.04296},
+  timestamp = {Mon, 13 Aug 2018 16:46:14 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/NairSBAFMPSBPLM15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{rlhyperparamrl,
+  author    = {Aleksandra Faust and
+               Anthony Francis and
+               Dar Mehta},
+  title     = {Evolving Rewards to Automate Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/1905.07628},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1905.07628},
+  archivePrefix = {arXiv},
+  eprint    = {1905.07628},
+  timestamp = {Tue, 28 May 2019 12:48:08 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1905-07628},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
